--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+altgraph==0.17
 cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 colorama==0.4.4
+future==0.18.2
 google-api-core==1.26.1
 google-api-python-client==2.0.2
 google-auth==1.27.1
@@ -11,14 +13,18 @@ google-auth-oauthlib==0.4.3
 googleapis-common-protos==1.53.0
 httplib2==0.19.0
 idna==2.10
-mcutils==1.1.1
+mcutils==1.1.2
 oauthlib==3.1.0
 packaging==20.9
+pefile==2019.4.18
 protobuf==3.15.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pyinstaller==4.2
+pyinstaller-hooks-contrib==2021.1
 pyparsing==2.4.7
 pytz==2021.1
+pywin32-ctypes==0.2.0
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
